fix(frontend/gui): fix overflowing project's name

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -719,3 +719,12 @@ button {
     display: flex;
     flex-wrap: nowrap;
 }
+
+.project-name {
+    word-wrap: break-word;
+    word-break: break-all;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
